Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     min-height: 100vh;
     color: white;
     font-family: Geneva, sans-serif;
-    overflow-x: hidden;
+    background-color: var(--background-blue);
 }
 
 ul {
@@ -178,6 +178,7 @@ ul li:hover:after {
     background-color: var(--background-blue);
     color: white;
     gap: 4rem;
+    overflow: hidden;
 }
 
 section h1 {
